--- a/.github/workflows/network.yml
+++ b/.github/workflows/network.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Configure aws credentials
         id: credentials
         with:
-          role-to-assume: arn:aws:iam::315424472687:role/role-provider-ci-github
+          role-to-assume: arn:aws:iam::628659773423:role/cideploy-github
           aws-region: ap-southeast-2
           role-duration-seconds: 1800
         uses: aws-actions/configure-aws-credentials@v2
